# comma-fixer

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  example.ipynb  pyproject.toml
.github/workflows/: ci.yml  gh-publish.yml  publish.yml  pypi-publish.yml
examples/: example_1.csv  example_2.csv  example_2_parsed.csv  example_3.csv  example_3_parsed.csv  example_4.csv  example_4_parsed.csv
src/comma_fixer/: column.py  fixer.py  parsed.py  schema.py
tests/chunker/: test_create_chunks.py
tests/fixer/: test_fixer.py  test_fixer_comma_format_columns.py  test_fixer_string.py
tests/schema/: test_schema.py  test_schema_basic.py  test_schema_datetime_col.py  test_schema_numeric_col.py  test_schema_str_col.py
tests/stress_test/: test_stress_test.py
