[project]
name = "comma-fixer"
version = "0.1.0"
description = ""
authors = [
    {name = "Phavarisa Limchitti",email = "aom.limchitti@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "networkx (>=3.5,<4.0)",
    "pythainlp (>=5.1.2,<6.0.0)",
    "scikit-learn (>=1.7,<1.8)"
]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ipykernel = "^6.29.5"
pre-commit = "^4.1.0"

[tool.pytest.ini_options]
markers = [
    "stress_test: marks tests as stress test (deselect with '-m \"not stress_test\"')",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
